<resources>
    <string name="app_name">Football Schedule</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next_match">Next Match:</string>
    <string name="previous_match">Previous Match:</string>
    <string name="goals">Goals</string>
    <string name="shots">Shots</string>
    <string name="vs">VS</string>
    <string name="goalkeeper">Goalkeeper</string>
    <string name="defense">Defense</string>
    <string name="lineup">Lineup</string>
    <string name="midfields">Midfields</string>
    <string name="forward">Forward</string>
    <string name="substitute">Substitute</string>
    <string name="description">Description</string>
    <string name="search">Search</string>
    <string name="match">Match</string>
    <string name="team">Team</string>
    <string name="favorites">Favorites</string>
</resources>
